fix(header): ensure white-space is nowrap for navbar links

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -3,6 +3,7 @@
   text-decoration: none;
   display: flex;
   gap: 0.5rem;
+  white-space: nowrap;
   @apply text-sm items-center hover:text-emerald-400;
 }
 
